--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@
   border-radius: 5px;
   height: 100%;
   overflow: auto;
-  max-height: 400px;
+  max-height: 520px;
   font-size: .9rem;
   padding: 20px 15px;
   background: #efefef;
@@ -108,6 +108,27 @@
 .wysiwyg strong,
 .wysiwyg b {
   font-weight: 600;
+}
+
+.wysiwyg blockquote {
+  margin: 20px 0 40px;
+  padding: 25px;
+  border:  1px solid #000;
+  border-radius: 5px;
+  position: relative;
+}
+
+.wysiwyg blockquote::after {
+  content:  '';
+  position: absolute;
+  right: 50px;
+  bottom: 0;
+  width: 25px;
+  height: 25px;
+  border-right: 1px solid #000;
+  border-bottom: 1px solid #000;
+  background: #fff;
+  transform: rotate(45deg) translateY(73%);
 }
 
 .wysiwyg abbr {
@@ -164,6 +185,7 @@
 .wysiwyg.show-highlighted em {
   box-shadow: 3px 3px 7px rgba(0,0,0,.3);
   background: #dadada;
+  border-radius: 25px;
 }
 
 .wysiwyg p::before,
