--- a/src/containers/InputContainer/InputContainer.css
+++ b/src/containers/InputContainer/InputContainer.css
@@ -34,6 +34,7 @@ input[type="number"]:disabled {
   flex: 1 1 50%;
   padding: 0 15px;
   width: 50%;
+  max-width: 50%;
   margin-bottom: 30px;
 }
 
@@ -45,10 +46,10 @@ input[type="number"]:disabled {
   padding: 20px 15px;
   background: #fff;
   border-radius: 5px;
-  box-shadow: 3px 3px 10px rgba(0,0,0,.3);
-  height: 100%;
+  border: 1px solid #000;
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
 }
 
 .lorem-block > div {
@@ -68,11 +69,16 @@ input[type="number"]:disabled {
   margin: 15px 0 0;
   color: #fff;
   font-size: .8rem;
+  font-weight: 600;
   cursor: pointer;
   transition: all .3s;
   border:  1px solid #000;
   flex: 1 1 33.3333%;
   border-bottom: 0;
+}
+
+.lorem-block .button:nth-child(2) {
+  border-left: 0;
 }
 
 .lorem-block .button:first-child {
@@ -107,6 +113,10 @@ input[type="number"]:disabled {
   color: #000;
   background: #fff;
   box-shadow: inset 5px 5px 7px rgba(0,0,0,.3);
+}
+
+.lorem-block .add-all:hover {
+  background-color: #b8ce8d;
 }
 
 .lorem-block .clear:hover {
