--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i');
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script');
 
 * {
   box-sizing: border-box;
   outline:  none !important;
 }
 
+::-ms-clear {
+    display: none;
+}
+
 .container {
-  padding: 0 15px;
+  padding: 0 30px;
   display: flex;
   flex-direction: column;
-  flex: 1 1 100%;
 }
 
 .row {
@@ -31,7 +35,9 @@ body {
   padding: 0;
   line-height: 1.45;
   font-family: 'Open Sans', sans-serif;
-  background-color: #e0e0e0;
+  background: linear-gradient(#ccc 0%, #ccc 1px, #e0e0e0 1px);
+  background-size: 20px 20px;
+  background-attachment: fixed;
   color: #000;
 }
 
@@ -41,4 +47,12 @@ p {
 
 blockquote {
   font-style: italic;
+}
+
+@media (max-width: 767px) {
+  html { font-size: 14px; }
+
+  .container {
+    padding: 0 15px;
+  }
 }
